# swiss

./: Pipfile  conf.py  index.md  pyproject.toml  readme.md
.github/: index.md
.github/workflows/: black.yml  documentation.yml  pylint.yml
swiss/: __init__.py  __main__.py  index.md  memoryviewbyteutils.py  multipart_stream.py  simplewebserver.py
tests/: test_memoryviewbyteutils.py
