[project]
authors = [
    {name = "James Nugraha", email = "james@aristanetworks.net"}
    {name = "Xander Harris",email = "xandertheharris@gmail.com"}
]
name = "swiss"
version = "0.0.1"
description = "Simple web server implementation something SWISS"
license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
